# info_project

./: .gitignore  Cargo.toml
src/: basic.rs  enemy.rs  game.rs  main.rs  menu.rs  persist.rs  player.rs  projectile.rs  score.rs  xp.rs
src/basic/: fx.rs  health.rs  motion.rs  render.rs
src/enemy/: asteroid.rs  charged.rs  follower.rs  mine.rs
src/game/: init.rs  state.rs  wave.rs
