[package]
name = "projekto-typ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.12"
fastrand = "2.0.1"
fnv = "1.0.7"
hecs = "0.10.4"
macroquad = { version = "0.4.5", features = ["audio"] }
nanoserde = "0.1.37"
